[gd_scene load_steps=43 format=2]

[ext_resource path="res://art/anne/Anne_full.png" type="Texture" id=1]
[ext_resource path="res://scenes/players/minecart.gd" type="Script" id=2]
[ext_resource path="res://art/mod/face.png" type="Texture" id=3]
[ext_resource path="res://art/menus/faces.png" type="Texture" id=39]
[ext_resource path="res://themes/lifeBars.tres" type="Theme" id=40]
[ext_resource path="res://themes/playerPanelText.tres" type="Theme" id=41]
[ext_resource path="res://art/pickups/coin_icon.png" type="Texture" id=42]
[ext_resource path="res://scenes/players/lifeCounterFont.tres" type="DynamicFont" id=43]
[ext_resource path="res://art/menus/hp_bar.png" type="Texture" id=44]

[sub_resource type="Animation" id=153]
resource_name = "flash"
length = 0.5
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("zeroPoint/MeshInstance/AnimatedSprite3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.02, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("zeroPoint/MeshInstance:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.02, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=154]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("zeroPoint/MeshInstance/AnimatedSprite3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("zeroPoint/MeshInstance:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="SpatialMaterial" id=123]
albedo_color = Color( 0.516113, 0.516113, 0.516113, 1 )

[sub_resource type="CubeMesh" id=124]
material = SubResource( 123 )
size = Vector3( 2, 2, 3 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 104, 64 )

[sub_resource type="SpriteFrames" id=128]
animations = [ {
"frames": [ SubResource( 127 ) ],
"loop": false,
"name": "Anne",
"speed": 0.0
} ]

[sub_resource type="BoxShape" id=129]
resource_local_to_scene = true
extents = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="CylinderShape" id=130]
height = 3.0

[sub_resource type="SphereShape" id=155]
radius = 2.0

[sub_resource type="SpatialMaterial" id=151]

[sub_resource type="CubeMesh" id=152]
material = SubResource( 151 )
size = Vector3( 3, 4.5, 0.1 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 0, 0, 400, 350 )

[sub_resource type="AtlasTexture" id=146]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 1600, 0, 400, 350 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 0, 350, 400, 350 )

[sub_resource type="AtlasTexture" id=141]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 2000, 350, 400, 350 )

[sub_resource type="AtlasTexture" id=136]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 400, 350, 400, 350 )

[sub_resource type="AtlasTexture" id=148]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 1200, 350, 400, 350 )

[sub_resource type="AtlasTexture" id=147]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 1200, 700, 400, 350 )

[sub_resource type="AtlasTexture" id=133]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 1600, 350, 400, 350 )

[sub_resource type="AtlasTexture" id=140]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 1600, 700, 400, 350 )

[sub_resource type="AtlasTexture" id=150]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 800, 0, 400, 350 )

[sub_resource type="AtlasTexture" id=134]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 400, 0, 400, 350 )

[sub_resource type="AtlasTexture" id=137]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 800, 350, 400, 350 )

[sub_resource type="AtlasTexture" id=144]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 388, 340 )

[sub_resource type="AtlasTexture" id=143]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 680, 388, 340 )

[sub_resource type="AtlasTexture" id=138]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 1200, 0, 400, 350 )

[sub_resource type="AtlasTexture" id=145]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 340, 388, 340 )

[sub_resource type="AtlasTexture" id=139]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 400, 700, 400, 350 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 0, 700, 400, 350 )

[sub_resource type="AtlasTexture" id=142]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 2000, 0, 400, 350 )

[sub_resource type="AtlasTexture" id=149]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 2000, 700, 400, 350 )

[sub_resource type="AtlasTexture" id=135]
flags = 4
atlas = ExtResource( 39 )
region = Rect2( 800, 700, 400, 350 )

[sub_resource type="SpriteFrames" id=132]
animations = [ {
"frames": [ SubResource( 53 ) ],
"loop": false,
"name": "idleAnne",
"speed": 1.0
}, {
"frames": [ SubResource( 146 ) ],
"loop": false,
"name": "idleMaggie",
"speed": 5.0
}, {
"frames": [ SubResource( 55 ) ],
"loop": false,
"name": "lowAnne",
"speed": 1.0
}, {
"frames": [ SubResource( 141 ) ],
"loop": false,
"name": "lowGrime",
"speed": 5.0
}, {
"frames": [ SubResource( 136 ) ],
"loop": false,
"name": "lowSasha",
"speed": 5.0
}, {
"frames": [ SubResource( 148 ) ],
"loop": false,
"name": "lowSprig",
"speed": 5.0
}, {
"frames": [ SubResource( 147 ) ],
"loop": false,
"name": "hurtSprig",
"speed": 5.0
}, {
"frames": [ SubResource( 133 ) ],
"loop": false,
"name": "lowMaggie",
"speed": 5.0
}, {
"frames": [ SubResource( 140 ) ],
"loop": false,
"name": "hurtMaggie",
"speed": 5.0
}, {
"frames": [ SubResource( 150 ) ],
"loop": false,
"name": "idleMarcy",
"speed": 5.0
}, {
"frames": [ SubResource( 134 ) ],
"loop": false,
"name": "idleSasha",
"speed": 5.0
}, {
"frames": [ SubResource( 137 ) ],
"loop": false,
"name": "lowMarcy",
"speed": 5.0
}, {
"frames": [ SubResource( 144 ) ],
"loop": false,
"name": "idleDarla",
"speed": 5.0
}, {
"frames": [ SubResource( 143 ) ],
"loop": false,
"name": "hurtDarla",
"speed": 5.0
}, {
"frames": [ SubResource( 138 ) ],
"loop": false,
"name": "idleSprig",
"speed": 5.0
}, {
"frames": [ SubResource( 145 ) ],
"loop": false,
"name": "lowDarla",
"speed": 5.0
}, {
"frames": [ SubResource( 139 ) ],
"loop": false,
"name": "hurtSasha",
"speed": 5.0
}, {
"frames": [ SubResource( 54 ) ],
"loop": false,
"name": "hurtAnne",
"speed": 1.0
}, {
"frames": [ SubResource( 142 ) ],
"loop": false,
"name": "idleGrime",
"speed": 5.0
}, {
"frames": [ SubResource( 149 ) ],
"loop": false,
"name": "hurtGrime",
"speed": 5.0
}, {
"frames": [ SubResource( 135 ) ],
"loop": false,
"name": "hurtMarcy",
"speed": 5.0
} ]

[node name="minecart" type="KinematicBody" groups=["minecart"]]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 32768
collision_mask = 1030
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 50.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="effects" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/flash = SubResource( 153 )
anims/idle = SubResource( 154 )

[node name="zeroPoint" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="zeroPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cast_shadow = 0
mesh = SubResource( 124 )
skeleton = NodePath("../..")
material/0 = null

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="zeroPoint/MeshInstance"]
transform = Transform( -4.07325e-08, 0.258819, 0.965926, 2.26267e-08, 0.965926, -0.258819, -1, 1.13133e-08, -4.52008e-08, -0.324892, -0.29636, -1.42015e-08 )
layers = 3
offset = Vector2( 0, 31 )
flip_h = true
pixel_size = 0.07
alpha_cut = 1
frames = SubResource( 128 )
animation = "Anne"

[node name="hitbox" type="Area" parent="zeroPoint"]
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="hitboxCollision" type="CollisionShape" parent="zeroPoint/hitbox"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 4, 0 )
shape = SubResource( 129 )
disabled = true

[node name="hurtbox" type="Area" parent="zeroPoint"]
collision_layer = 32768
collision_mask = 4580

[node name="CollisionShape" type="CollisionShape" parent="zeroPoint/hurtbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 130 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2, 0 )
shape = SubResource( 155 )

[node name="shadowMaker" type="MeshInstance" parent="."]
transform = Transform( 1, -4.37114e-08, 4.37114e-08, 4.37114e-08, -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, 0, 2.42615, 0 )
cast_shadow = 3
mesh = SubResource( 152 )
material/0 = null

[node name="invTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="crashTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="playerInfo0" type="Control" parent="."]
anchor_top = 0.85
anchor_bottom = 0.85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="face" type="AnimatedSprite" parent="playerInfo0"]
position = Vector2( -8, -41 )
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 132 )
animation = "idleAnne"
centered = false

[node name="PanelBG" type="ColorRect" parent="playerInfo0"]
margin_left = 125.0
margin_top = 25.0
margin_right = 306.0
margin_bottom = 115.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelLine" type="NinePatchRect" parent="playerInfo0"]
margin_left = 121.0
margin_top = 25.0
margin_right = 310.0
margin_bottom = 116.0
texture = ExtResource( 44 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin" type="Sprite" parent="playerInfo0"]
light_mask = 0
position = Vector2( 163, 88 )
scale = Vector2( 3, 3 )
texture = ExtResource( 42 )
region_rect = Rect2( 0, 0, 12, 12 )

[node name="lifeBar" type="ProgressBar" parent="playerInfo0"]
margin_left = 136.0
margin_top = 43.0
margin_right = 296.0
margin_bottom = 63.0
theme = ExtResource( 40 )
step = 1.0
value = 100.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeOutline" type="NinePatchRect" parent="playerInfo0"]
margin_left = 132.0
margin_top = 39.0
margin_right = 300.0
margin_bottom = 67.0
texture = ExtResource( 44 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinX" type="Label" parent="playerInfo0"]
margin_left = 185.0
margin_top = 73.0
margin_right = 215.0
margin_bottom = 103.0
theme = ExtResource( 41 )
text = "x"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charName" type="Label" parent="playerInfo0"]
margin_left = 121.0
margin_top = -7.0
margin_right = 312.0
margin_bottom = 23.0
theme = ExtResource( 41 )
text = "Anne"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinCounter" type="Label" parent="playerInfo0"]
margin_left = 215.0
margin_top = 73.0
margin_right = 295.0
margin_bottom = 103.0
theme = ExtResource( 41 )
text = "999"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeCounter" type="Label" parent="playerInfo0"]
margin_left = 90.0
margin_top = 68.0
margin_right = 122.0
margin_bottom = 108.0
theme = ExtResource( 41 )
custom_fonts/font = ExtResource( 43 )
text = "9"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerInfo1" type="Control" parent="."]
anchor_top = 0.85
anchor_bottom = 0.85
margin_left = 320.0
margin_right = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="face" type="AnimatedSprite" parent="playerInfo1"]
position = Vector2( -8, -41 )
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 132 )
animation = "idleMaggie"
centered = false

[node name="PanelBG" type="ColorRect" parent="playerInfo1"]
margin_left = 125.0
margin_top = 25.0
margin_right = 306.0
margin_bottom = 115.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelLine" type="NinePatchRect" parent="playerInfo1"]
margin_left = 121.0
margin_top = 25.0
margin_right = 310.0
margin_bottom = 116.0
texture = ExtResource( 44 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin" type="Sprite" parent="playerInfo1"]
light_mask = 0
position = Vector2( 163, 88 )
scale = Vector2( 3, 3 )
texture = ExtResource( 42 )
region_rect = Rect2( 0, 0, 12, 12 )

[node name="lifeBar" type="ProgressBar" parent="playerInfo1"]
margin_left = 136.0
margin_top = 43.0
margin_right = 296.0
margin_bottom = 63.0
theme = ExtResource( 40 )
step = 1.0
value = 100.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeOutline" type="NinePatchRect" parent="playerInfo1"]
margin_left = 132.0
margin_top = 39.0
margin_right = 300.0
margin_bottom = 67.0
texture = ExtResource( 44 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinX" type="Label" parent="playerInfo1"]
margin_left = 185.0
margin_top = 73.0
margin_right = 215.0
margin_bottom = 103.0
theme = ExtResource( 41 )
text = "x"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charName" type="Label" parent="playerInfo1"]
margin_left = 121.0
margin_top = -7.0
margin_right = 312.0
margin_bottom = 23.0
theme = ExtResource( 41 )
text = "Anne"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinCounter" type="Label" parent="playerInfo1"]
margin_left = 215.0
margin_top = 73.0
margin_right = 295.0
margin_bottom = 103.0
theme = ExtResource( 41 )
text = "999"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeCounter" type="Label" parent="playerInfo1"]
margin_left = 90.0
margin_top = 68.0
margin_right = 122.0
margin_bottom = 108.0
theme = ExtResource( 41 )
custom_fonts/font = ExtResource( 43 )
text = "9"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerInfo2" type="Control" parent="."]
anchor_top = 0.85
anchor_bottom = 0.85
margin_left = 640.0
margin_right = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="face" type="AnimatedSprite" parent="playerInfo2"]
position = Vector2( -8, -41 )
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 132 )
animation = "idleSprig"
centered = false

[node name="PanelBG" type="ColorRect" parent="playerInfo2"]
margin_left = 125.0
margin_top = 25.0
margin_right = 306.0
margin_bottom = 115.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelLine" type="NinePatchRect" parent="playerInfo2"]
margin_left = 121.0
margin_top = 25.0
margin_right = 310.0
margin_bottom = 116.0
texture = ExtResource( 44 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin" type="Sprite" parent="playerInfo2"]
light_mask = 0
position = Vector2( 163, 88 )
scale = Vector2( 3, 3 )
texture = ExtResource( 42 )
region_rect = Rect2( 0, 0, 12, 12 )

[node name="lifeBar" type="ProgressBar" parent="playerInfo2"]
margin_left = 136.0
margin_top = 43.0
margin_right = 296.0
margin_bottom = 63.0
theme = ExtResource( 40 )
step = 1.0
value = 100.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeOutline" type="NinePatchRect" parent="playerInfo2"]
margin_left = 132.0
margin_top = 39.0
margin_right = 300.0
margin_bottom = 67.0
texture = ExtResource( 44 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinX" type="Label" parent="playerInfo2"]
margin_left = 185.0
margin_top = 73.0
margin_right = 215.0
margin_bottom = 103.0
theme = ExtResource( 41 )
text = "x"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charName" type="Label" parent="playerInfo2"]
margin_left = 121.0
margin_top = -7.0
margin_right = 312.0
margin_bottom = 23.0
theme = ExtResource( 41 )
text = "Anne"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinCounter" type="Label" parent="playerInfo2"]
margin_left = 215.0
margin_top = 73.0
margin_right = 295.0
margin_bottom = 103.0
theme = ExtResource( 41 )
text = "999"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeCounter" type="Label" parent="playerInfo2"]
margin_left = 90.0
margin_top = 68.0
margin_right = 122.0
margin_bottom = 108.0
theme = ExtResource( 41 )
custom_fonts/font = ExtResource( 43 )
text = "9"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerInfo3" type="Control" parent="."]
anchor_top = 0.85
anchor_bottom = 0.85
margin_left = 960.0
margin_right = 960.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="face" type="AnimatedSprite" parent="playerInfo3"]
position = Vector2( -8, -41 )
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 132 )
animation = "idleGrime"
centered = false

[node name="PanelBG" type="ColorRect" parent="playerInfo3"]
margin_left = 125.0
margin_top = 25.0
margin_right = 306.0
margin_bottom = 115.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelLine" type="NinePatchRect" parent="playerInfo3"]
margin_left = 121.0
margin_top = 25.0
margin_right = 310.0
margin_bottom = 116.0
texture = ExtResource( 44 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin" type="Sprite" parent="playerInfo3"]
light_mask = 0
position = Vector2( 163, 88 )
scale = Vector2( 3, 3 )
texture = ExtResource( 42 )
region_rect = Rect2( 0, 0, 12, 12 )

[node name="lifeBar" type="ProgressBar" parent="playerInfo3"]
margin_left = 136.0
margin_top = 43.0
margin_right = 296.0
margin_bottom = 63.0
theme = ExtResource( 40 )
step = 1.0
value = 100.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeOutline" type="NinePatchRect" parent="playerInfo3"]
margin_left = 132.0
margin_top = 39.0
margin_right = 300.0
margin_bottom = 67.0
texture = ExtResource( 44 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinX" type="Label" parent="playerInfo3"]
margin_left = 185.0
margin_top = 73.0
margin_right = 215.0
margin_bottom = 103.0
theme = ExtResource( 41 )
text = "x"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charName" type="Label" parent="playerInfo3"]
margin_left = 121.0
margin_top = -7.0
margin_right = 312.0
margin_bottom = 23.0
theme = ExtResource( 41 )
text = "Anne"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinCounter" type="Label" parent="playerInfo3"]
margin_left = 215.0
margin_top = 73.0
margin_right = 295.0
margin_bottom = 103.0
theme = ExtResource( 41 )
text = "999"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeCounter" type="Label" parent="playerInfo3"]
margin_left = 90.0
margin_top = 68.0
margin_right = 122.0
margin_bottom = 108.0
theme = ExtResource( 41 )
custom_fonts/font = ExtResource( 43 )
text = "9"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="zeroPoint/hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="invTimer" to="." method="_on_invTimer_timeout"]
[connection signal="timeout" from="crashTimer" to="." method="_on_crashTimer_timeout"]
